force-app/main/default/objects/TabulacaoCaso__c/TabulacaoCaso__c.object-meta.xml
<CustomObject>
    <description>Guarda as tabulações personalizadas dos casos.</description>
    <label>Tabulação de Caso</label>
    <nameField>
        <label>Nome de Tabulação Caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabulações de Casos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>