force-app/main/default/objects/TabulacaoCaso__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <displayFormat>TAB-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <type>AutoNumber</type>
</CustomField>