force-app/main/default/objects/TabulacaoCaso__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Tabulações de Casos</relationshipLabel>
    <relationshipName>TabulacaoMarca</relationshipName>
    <type>Lookup</type>
</CustomField>