force-app/main/default/objects/TabulacaoCaso__c/fields/TabulacaoPadrao__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoPadrao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tabulação Padrão ?</label>
    <type>Checkbox</type>
</CustomField>