force-app/main/default/objects/TabulacaoCaso__c/fields/TabulacaoPai__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabulação Pai</label>
    <referenceTo>TabulacaoCaso__c</referenceTo>
    <relationshipLabel>Tabulações Relacionadas</relationshipLabel>
    <relationshipName>TabulacaoPai</relationshipName>
    <type>Lookup</type>
</CustomField>