force-app/main/default/objects/TabulacaoCaso__c/fields/TipodeTabulacao__c.field-meta.xml
<CustomField>
    <fullName>TipodeTabulacao__c</fullName>
    <label>Tipo de Tabulação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tipo</fullName>
            </value>
            <value>
                <fullName>Motivo</fullName>
            </value>
            <value>
                <fullName>Submotivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>