force-app/main/default/objects/TabulacaoCaso__c/recordTypes/Motivo.recordType-meta.xml
<RecordType>
    <fullName>Motivo</fullName>
    <active>true</active>
    <label>Motivo</label>
</RecordType>