force-app/main/default/objects/TabulacaoCaso__c/recordTypes/Sub_Motivo.recordType-meta.xml
<RecordType>
    <fullName>Sub_Motivo</fullName>
    <active>true</active>
    <label>Sub-Motivo</label>
</RecordType>