force-app/main/default/objects/TabulacaoCaso__c/recordTypes/Tipo.recordType-meta.xml
<RecordType>
    <fullName>Tipo</fullName>
    <active>true</active>
    <label>Tipo</label>
</RecordType>