force-app/main/default/objects/TabulacaoCaso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TipodeTabulacao__c</columns>
    <columns>TabulacaoPai__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>